# SgbmDepthAndroid

./: .editorconfig  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  native.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  depth_estimator.cpp  logging.h  sgbm_android_lib.cpp
app/src/main/java/me/timpushkin/sgbm_android/: MainActivity.kt
app/src/main/java/me/timpushkin/sgbm_android/ui/elements/: MenuButtons.kt
app/src/main/java/me/timpushkin/sgbm_android/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/me/timpushkin/sgbm_android/utils/: Conversions.kt  Native.kt  StorageUtils.kt
app/src/main/java/me/timpushkin/sgbmandroid_app/: MainActivity.kt
app/src/main/java/me/timpushkin/sgbmandroid_app/ui/elements/: MenuButtons.kt
app/src/main/java/me/timpushkin/sgbmandroid_app/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/me/timpushkin/sgbmandroid_app/utils/: Conversions.kt  StorageUtils.kt
app/src/main/java/me/timpushkin/sgbmandroidapp/: MainActivity.kt
app/src/main/java/me/timpushkin/sgbmandroidapp/ui/: AppState.kt  Menu.kt  MenuButtons.kt  ResultsScreen.kt  ScaleFactorField.kt
app/src/main/java/me/timpushkin/sgbmandroidapp/ui/elements/: MenuButtons.kt
app/src/main/java/me/timpushkin/sgbmandroidapp/utils/: Conversions.kt  StorageUtils.kt
app/src/main/java/me/timpushkin/sgbmdepthapp/: MainActivity.kt
app/src/main/java/me/timpushkin/sgbmdepthapp/ui/: AppState.kt  Menu.kt  ResultsScreen.kt
app/src/main/java/me/timpushkin/sgbmdepthapp/utils/: Conversions.kt  StorageUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/cpp/: CMakeLists.txt  README.md  conversions.h  depth_estimator.cpp  depth_estimator.h
lib/src/main/cpp/core/: CMakeLists.txt  depth_estimator.cpp  logging.h
lib/src/main/cpp/examples/: CMakeLists.txt  GetDepthExample.cpp  example.cpp  get_depth_example.cpp
lib/src/main/cpp/include/: CalibParamsReader.h  DepthEstimator.h  depth_estimator.h
lib/src/main/cpp/src/: CMakeLists.txt  CalibParamsReader.cpp  DepthEstimator.cpp  Logging.h  conversions.cpp  conversions.h  depth_estimator.cpp
opencv/sdk/: build.gradle
sgbm_android_lib/: build.gradle
sgbm_android_lib/src/main/: AndroidManifest.xml
sgbm_android_lib/src/main/cpp/: CMakeLists.txt  depth_estimator.h  sgbm_android_lib.cpp
sgbm_android_lib/src/main/java/me/timpushkin/sgbm_android_lib/: SgbmAndroidLib.kt
sgbmandroid/: build.gradle  consumer-rules.pro
sgbmandroid/src/main/: AndroidManifest.xml
sgbmandroid/src/main/cpp/: .gitignore  BuildOpenCV.cmake  CMakeLists.txt  CPPLINT.cfg  README.md
sgbmandroid/src/main/cpp/examples/: CMakeLists.txt  GetDepthExample.cpp
sgbmandroid/src/main/cpp/include/: DepthEstimator.h
sgbmandroid/src/main/cpp/src/: CMakeLists.txt  Constants.h  Conversions.h  DepthEstimator.cpp  Logging.h
sgbmandroid/src/main/java/me/timpushkin/sgbmandroid/: SgbmAndroidConfig.java
sgbmdepth/: build.gradle  consumer-rules.pro
sgbmdepth/src/main/cpp/: .clang-tidy  .gitignore  BuildOpenCV.cmake  CMakeLists.txt  README.md
sgbmdepth/src/main/cpp/examples/: CMakeLists.txt  GetDepthExample.cpp
sgbmdepth/src/main/cpp/include/: DepthEstimator.h
sgbmdepth/src/main/cpp/src/: CMakeLists.txt  Constants.h  Conversions.h  DepthEstimator.cpp  Logging.h
